DOC-SWAGGER updated
