# src/routes/index.js
@@ -5,17 +5,16 @@ import userRouter from './user-router.js';
 import productRouter from './product-router.js';
 import servicesRouter from './service-router.js';
 import { checkToken } from '../middlewares/auth-middleware.js';
-import appointmentRouter from './appointments-router.js'
-
+import appointmentRouter from './appointments-router.js';
 
 const router = express.Router();
 
 router.post('/login', login);
 
 router.use(miscRouter);
-router.use('/users' ,checkToken,userRouter);
-router.use('/products',checkToken,productRouter);
-router.use('/services',checkToken,servicesRouter);
-router.use('/appointments',checkToken, appointmentRouter);
+router.use('/users', checkToken, userRouter);
+router.use('/products', checkToken, productRouter);
+router.use('/services', checkToken, servicesRouter);
+router.use('/appointments', checkToken, appointmentRouter);
 
 export default router;
